# shadowplay_toggler

./: .gitignore  .gitmodules  README.md  design.md  flutter_launcher_icons.yaml  pubspec.yaml
.cursor/plans/: feature_breakdown_plans_da922b27.plan.md
lib/: app.dart  main.dart
lib/constants/: app_constants.dart  app_theme.dart  nvapi_status.dart
lib/models/: add_program_result.dart  adopt_result.dart  app_exception.dart  backup_info.dart  batch_result.dart  exclusion_rule.dart  managed_rule.dart  nvapi_state.dart  profile_info.dart  reconciliation_result.dart  remove_result.dart  (+2 more)
native/: CMakeLists.txt  bridge.cpp  bridge.h
plans/: 01-fix-template-and-setup.md  02-project-structure.md  03-app-theme.md  04-state-management.md  05-native-bridge-cmake-setup.md  06-native-bridge-init-shutdown.md  07-native-bridge-session-management.md  08-native-bridge-enumerate-profiles.md  09-native-bridge-enumerate-apps.md  10-native-bridge-get-set-settings.md  11-native-bridge-backup-restore.md  12-dart-ffi-bindings.md  13-local-database.md  14-app-shell-layout.md  15-left-pane-tabs.md  16-managed-rules-list.md  17-detected-rules-list.md  18-nvidia-defaults-list.md  19-search-filter.md  20-rule-detail-view.md  21-add-program-flow.md  22-remove-exclusion-flow.md  23-scan-profiles-feature.md  24-backup-restore-feature.md  25-advanced-hex-editor.md  26-startup-reconciliation.md  27-adopt-existing-rules.md  28-batch-operations.md  29-error-handling-notifications.md  30-first-run-experience.md  31-code-review.md
scripts/: build_windows.bat  export_app_icons.bat
test/: widget_test.dart
windows/: CMakeLists.txt
(+77 files in other folders)
